--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,18 @@
     font-family: "Roboto", sans-serif;
     color: #161616;
 }
+
+body {
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color:rgb(204, 228, 216);
+    padding: 50px;
+  }
+
+div {
+    background-color:white;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top:20px;
+    padding-bottom:20px;
+}
